--- a/css/style.css
+++ b/css/style.css
@@ -140,3 +140,7 @@ img {
     padding: 0.5rem;
     font-size: 2rem;
 }
+#practiceslist{
+    padding: 0.5rem;
+    font-size: 2rem;
+}
